# Processor

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt  main
backend/include/: kiss_fft_wrapper.h  signalClass.h
backend/src/: kiss_fft_wrapper.cpp  main.cpp  signalClass.cpp
gui/: CMakeLists.txt  window.cpp  window.h
gui/widgets/: constellation_plot.cpp  constellation_plot.h  power_spectrum.cpp  power_spectrum.h  time_domain.cpp  time_domain.h  waterfall.cpp  waterfall.h
include/: signalClass.h
qt_gui/: .gitignore  GUI.pro  constellation_plot.cpp  constellation_plot.h  power_spectrum.cpp  power_spectrum.h  window.cpp
